Creo que ahora si, solo estaba enviando la carpeta css

--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Titulo del blogspot</title>
 </head>
 <body>
