--- a/blogspot.html
+++ b/blogspot.html
@@ -5,7 +5,12 @@
     <title>Titulo del blogspot</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blogspot</h1>
-    <p>y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos a hacer un blogspot</h1>
+            <p>y este es el parrafo de inicio</p>
+            <p>aqui vamos a explicar lo que se pueden hacer con las ramas</p>
+        </div>
+    </div>
 </body>
 </html>
