estoy verificando a donde se va a mandar este cambio

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,7 @@
             <h1>Aqui vamos a hacer un blogspot</h1>
             <p>y este es el parrafo de inicio</p>
             <p>aqui vamos a explicar lo que se pueden hacer con las ramas</p>
+            <p>Estoy haciendo un cambio y no se a donde se va a mandar</p>
         </div>
     </div>
 </body>
